fix spacings on email modal

--- a/components/modals/emailModal.styl
+++ b/components/modals/emailModal.styl
@@ -12,8 +12,7 @@ colorFail = colorOrange
   &.success
     height: propUnit9x
   &.fail
-    height: propUnit14x
-
+    height: propUnit16x
 
   & .container
     position: absolute
@@ -32,7 +31,7 @@ colorFail = colorOrange
       opacity: 1.0
 
   & h1
-    margin: spacing4x 0 spacing2x
+    margin: spacing4x 0 !important
     text-align: center
 
 
